--- a/Vodic.html
+++ b/Vodic.html
@@ -3,7 +3,7 @@
 <HEAD>
 <META http-equiv="Content-Type" content="text/html; charset=utf-8">
 <TITLE>Studentski pohodi</TITLE>
-<link rel="stylesheet" type="text/css" href="indexCSS.css">
+<link rel="stylesheet" type="text/css" href="vodic.css">
 </HEAD>
 <BODY>
 	
@@ -28,18 +28,54 @@
 	<div id="dno"></div>
 	<div id="face"></div>
 
-   <!--p id="oNama"> O nama</p>
-   <p id="zastoMi"> Zašto mi?</p>
-   <p id="budiTi">Budi i ti dio nas!</p-->
-	
+    <div id="prica1">
+    	<div id="desnaSlika">
+ 	<p id="oNama">Projekat "Studentski pohodi" pokrenut je od strane mladih entuzijasta, planinara, ljubitelja prirode i putovanja, a podržan od zvaničnih institucija Univerziteta u Sarajevu, sa ciljem da se studentima i mladim ljudima omoguće obilasci prirodnih, kulturnih i drugih bogastava Bosne i Hercegovine kao i mnoge atraktivne evropske metropole.
+ 		<br>
+ 		<br>
+U projektu do sada je učestvovalo preko 20 000 studenata i mladih ljudi što ovaj projekat svrstava među najpopularnije studentske projekte u Bosni i Hercegovini. 
+<br>
+<br>
+Posebna specifičnost studentskih pohoda jeste da čitavu organizaciju vode studenti i mladi i da na svakom pohodu preovladava zajedništvo, solidarnost, prijateljstvo, povjerenje i druge vrijednosti koje su jako bitne, a zaboravljene.
+<br>
+<br>
+Studentski pohodi promovišu zdrav život i u svojim aktivnostima ne podržavaju poroke i ostale negativne pojave u društvu. 
+Glavni partner u realizaciji studentskih pohoda, kao i u upravljanju cijelim projektom je Studentski parlament Univerziteta u Sarajevu.
 
+
+</p>
+
+	</div>
+</div>
+
+<div id ="prica2">
+<div id="lijevaSlika">
+<p id="oNama2">
+
+ 1. Studentski pohodi su POKRET i PROJEKAT koji ima veliku podršku kod MLADIH LJUDI u kojem su NAJBITNIJI BAŠ TI MLADI LJUDI radi kojih POHODI i postoje!
+ 	<br>
+ 	<br>
+	2. Naš partner je CENTROTRANS kao najveći, najbolji, najsigurniji, najtransparentniji i najkvalitetniji prevoznik u Bosni i Hercegovini!
+    <br>
+    <br>
+	3. Naš partner je i CENTROTOURS agencija u sklopu Centotransa koja je lider na našem tržištu.
+    <br>
+    <br>
+	4. Studentski pohodi su najmasovniji pokret mladih ljudi, koji pored putovanja van granica Bosne i Hercegovine radi i još više planinarenja i obilazaka naše domovine, a posebno smo se dokazali velikim doprinosom i akcijama u pomoći svim nastradalim u poplavama i drugim društvenim akcijama u vidu protesta i drugih aktivnosti koje doprinose razvoju našeg društva.
+
+</p>
+
+</div >
+</div >
 	<footer>
-  <p id="kontaktdno">Kontakt<br>
-  Ekonomaki fakultet Sarajevo<br> 
-  062/096-896<br>
-  studentski.pohodi@hotmail.com
+  <p id="kontaktdno">  Kontakt<br>
+    ------------------------<br>
+        033 275 987<br>
+        studentski.pohodi@live.com<br>
+        Trg oslobođenja - Alija Izetbegović 1,
+71000 Sarajevo,
+Bosna i Hercegovina
   
-  <div id="podnozje"><p>Copyright &copy; Web tehnologije 2014/2015.</p></div>
 
 </footer>
 	</BODY></HTML>
