--- a/index.html
+++ b/index.html
@@ -28,19 +28,46 @@
 	<div id="dno"></div>
 	<div id="face"></div>
 
+
+<div id="vijesti">
+
 <p id="nas1">Pohod u Prag</p>
 <p id ="aut1">Author:Aida,29.3.2015.</p>
-<p id="vijest1">U periodu 26.2-2.3.2015.godine organizirali smo pohod u Prag. U ovom pohodu priključilo nam se 1200 pohodaša. </p>
-<p id="det1"> Detaljnije...</p>
-	
+<br>
+<p id="vijest1">U periodu 26.2-2.3.2015.godine organizirali smo pohod u Prag. U ovom pohodu priključilo nam se 1200 pohodaša i doživjelo prelijepe trenutke u Zlatnom gradu. U toku pohoda, obišli smo i Dresden i Budimpeštu. </p>
+<br>
+<p id="det1"> <a href="nesto"> Detaljnije...</a></p>
 
-	<footer>
-  <p id="kontaktdno">Kontakt<br>
-  Ekonomaki fakultet Sarajevo<br> 
-  062/096-896<br>
-  studentski.pohodi@hotmail.com
+
+</div>	
+
+<div id="vijesti2">
+<p id="nas1">Pohod u Istanbul</p>
+<p id ="aut1">Author:Aida,29.3.2015.</p>
+<br>
+<p id="vijest1">Istanbul je ponovo osvojen. Vjerni pohodaši uspjeli su zauzeti i ovaj grad. Turci su još jednom pokazali koliko vole naš narod. Hvala svima koji su bili dio nezaboravnog sedmodnevnog provoda. Vidimo se i sljedeće godine. </p>
+<br>
+<p id="det1"> <a href="nesto"> Detaljnije...</a></p>
+</div>	
+
+<div id="vijesti3">
+<p id="nas1">Pohod u Pariz</p>
+<p id ="aut1">Author:Aida,29.3.2015.</p>
+<br>
+<p id="vijest1">U periodu 26.2-2.3.2015.godine organizirali smo pohod u Prag. U ovom pohodu priključilo nam se 1200 pohodaša i doživjelo prelijepe trenutke u Zlatnom gradu. U toku pohoda, obišli smo i Dresden i Budimpeštu. </p>
+<br>
+<p id="det1"> <a href="nesto"> Detaljnije...</a></p>
+</div>	
+
+<footer>
+  <p id="kontaktdno"> Kontakt<br>
+    ------------------------<br>
+        033 275 987<br>
+        studentski.pohodi@live.com<br>
+        Trg oslobođenja - Alija Izetbegović 1,
+71000 Sarajevo,
+Bosna i Hercegovina
   
-  <div id="podnozje"><p>Copyright &copy; Web tehnologije 2014/2015.</p></div>
 
 </footer>
 	</BODY></HTML>
