--- a/kontakt.html
+++ b/kontakt.html
@@ -3,41 +3,65 @@
 <HEAD>
 <META http-equiv="Content-Type" content="text/html; charset=utf-8">
 <TITLE>Studentski pohodi</TITLE>
-<link rel="stylesheet" type="text/css" href="indexCSS.css">
+<link rel="stylesheet" type="text/css" href="kontaktCSS.css">
 </HEAD>
 <BODY>
 	
-	<h1> <div id="meni">
-		<ul>
-		<li><a href="#">Početna</a></li>
+	<h1>
+     <div id="logo"></div>
+     <div id="tekst">Studentski pohodi</div>
+	</h1>
+
+	
+	<div id="meni">
+	<ul>
+		<li><a href="index.html">Početna</a></li>
 		<li><a href="Vodic.html">Vodič za pohodaše</a></li>
 		<li><a href="mapa.html">Mapa</a></li>
 		<li><a href="galerija.html">Galerija</a></li>
 		<li><a href="kontakt.html">Kontakt</a></li>
 		<li><a href="prijava.html">Prijava</a></li>
 
-		</ul>
-	</div>
-
-	</h1>
-	
+		</ul></div>
     <div id ="nebo"></div>
 	<div id="twitter"></div>
 	<div id="dno"></div>
 	<div id="face"></div>
 
-   <!--p id="oNama"> O nama</p>
-   <p id="zastoMi"> Zašto mi?</p>
-   <p id="budiTi">Budi i ti dio nas!</p-->
+  <div id="kont">
+  	<div id="slika">
+  		<p> <div id="zaBold"> Kontakt</div><br>
+  			033 275 987<br>
+  			studentski.pohodi@live.com<br>
+  			Trg oslobođenja - Alija Izetbegović 1<br>
+71000 Sarajevo<br>
+Bosna i Hercegovina<br>
+<br><br><br>
+  		</p>
+  	</div>
+  	</div>
+</p>
 	
+<p id="partneri">Naši partneri:</p>
+<ul class="moja_lista">
+	<li> <a href="http://www.centrotrans.com/">http://www.centrotrans.com/</a></li>
+	<li><a href="http://www.centrotours.ba/">http://www.centrotours.ba/</a></li>
+	<li><a href="http://spus.ba/">http://spus.ba/</a></li>
+	<li><a href="http://tvsa.ba"/>http://tvsa.ba/</a></li>
+	<li><a href="http://www.afotografija.net/">http://www.afotografija.net/</a></li>
+	</ul>
+<br><br><br><br>
 
-	<footer>
-  <p id="kontaktdno">Kontakt<br>
-  Ekonomaki fakultet Sarajevo<br> 
-  062/096-896<br>
-  studentski.pohodi@hotmail.com
+
+<footer>
+  <p id="kontaktdno">  Kontakt<br>
+    ------------------------<br>
+        033 275 987<br>
+        studentski.pohodi@live.com<br>
+        Trg oslobođenja - Alija Izetbegović 1,
+71000 Sarajevo,
+Bosna i Hercegovina
   
-  <div id="podnozje"><p>Copyright &copy; Web tehnologije 2014/2015.</p></div>
 
 </footer>
 	</BODY></HTML>
