--- a/mapa.html
+++ b/mapa.html
@@ -28,18 +28,93 @@
 	<div id="dno"></div>
 	<div id="face"></div>
 
-   <!--p id="oNama"> O nama</p>
-   <p id="zastoMi"> Zašto mi?</p>
-   <p id="budiTi">Budi i ti dio nas!</p-->
+   <div id="mapaSlika"> 
+
+ <div id="tabela">
+   	<br> <br>
+
+   
 	
+<table>
+  <tr>
+    <td>Grad</td>
+    <td>Broj pohodaša</td> 
+    <td>Godina</td>
+  </tr>
+  <tr>
+  	<td>Prag</td>
+    <td>1200</td> 
+    <td>2015.</td>
+  </tr>
+    <td>Pariz</td>
+    <td>1000</td> 
+    <td>2014.</td>
+  </tr>
+  <tr>
+    <td>Istanbul</td>
+    <td>1200</td> 
+    <td>2014.</td>
+  </tr>
+  <tr>
+    <td>Zagreb</td>
+    <td>150</td> 
+    <td>2012., 2014.</td>
+  </tr>
+  
+  <tr>
+    <td>Barselona</td>
+    <td>600</td> 
+    <td>2014.</td>
+  </tr>
+  <tr>
+    <td>Beč</td>
+    <td>850</td> 
+    <td>2013.</td>
+  </tr>
+  <tr>
+    <td>Budimpešta</td>
+    <td>900</td> 
+    <td>2013.</td>
+  </tr>
+  
+<tr>
+    <td>Bobovac</td>
+    <td>202</td> 
+    <td>2013</td>
+  </tr>
+  <tr>
+    <td>Rim</td>
+    <td>1150</td> 
+    <td>2012</td>
+  </tr>
+ 
+  <tr>
+    <td>Prenj</td>
+    <td>300</td> 
+    <td>2012</td>
+  </tr>
+  <tr>
+    <td>Skakavac</td>
+    <td>100</td> 
+    <td>2012</td>
+  </tr>
+</table>
+
+
+ </div>
+</div>
+
+
 
 	<footer>
-  <p id="kontaktdno">Kontakt<br>
-  Ekonomaki fakultet Sarajevo<br> 
-  062/096-896<br>
-  studentski.pohodi@hotmail.com
+  <p id="kontaktdno">  Kontakt<br>
+    ------------------------<br>
+        033 275 987<br>
+        studentski.pohodi@live.com<br>
+        Trg oslobođenja - Alija Izetbegović 1,
+71000 Sarajevo,
+Bosna i Hercegovina
   
-  <div id="podnozje"><p>Copyright &copy; Web tehnologije 2014/2015.</p></div>
 
 </footer>
 	</BODY></HTML>
