--- a/galerija.html
+++ b/galerija.html
@@ -28,18 +28,17 @@
 	<div id="dno"></div>
 	<div id="face"></div>
 
-   <!--p id="oNama"> O nama</p>
-   <p id="zastoMi"> Zašto mi?</p>
-   <p id="budiTi">Budi i ti dio nas!</p-->
+   <p id="Izrada"> Stranica je u fazi izrade....</p>
 	
 
 	<footer>
-  <p id="kontaktdno">Kontakt<br>
-  Ekonomaki fakultet Sarajevo<br> 
-  062/096-896<br>
-  studentski.pohodi@hotmail.com
-  
-  <div id="podnozje"><p>Copyright &copy; Web tehnologije 2014/2015.</p></div>
+  <p id="kontaktdno">  Kontakt<br>
+    ------------------------<br>
+        033 275 987<br>
+        studentski.pohodi@live.com<br>
+        Trg oslobođenja - Alija Izetbegović 1,
+71000 Sarajevo,
+Bosna i Hercegovina
 
 </footer>
 	</BODY></HTML>
