--- a/prijava.html
+++ b/prijava.html
@@ -3,12 +3,18 @@
 <HEAD>
 <META http-equiv="Content-Type" content="text/html; charset=utf-8">
 <TITLE>Studentski pohodi</TITLE>
-<link rel="stylesheet" type="text/css" href="indexCSS.css">
+<link rel="stylesheet" type="text/css" href="prijava.css">
 </HEAD>
 <BODY>
 	
-	<h1> <div id="meni">
-		<ul>
+	<h1>
+     <div id="logo"></div>
+     <div id="tekst">Studentski pohodi</div>
+	</h1>
+
+	
+	<div id="meni">
+	<ul>
 		<li><a href="index.html">Početna</a></li>
 		<li><a href="Vodic.html">Vodič za pohodaše</a></li>
 		<li><a href="mapa.html">Mapa</a></li>
@@ -16,5 +22,63 @@
 		<li><a href="kontakt.html">Kontakt</a></li>
 		<li><a href="prijava.html">Prijava</a></li>
 
-		</ul>
-	</div>
+		</ul></div>
+    <div id ="nebo"></div>
+	<div id="twitter"></div>
+	<div id="dno"></div>
+	<div id="face"></div>
+
+
+
+  <div id="forma1">
+  	
+   <form class="formaPrijava">
+  		<p id="prijaviSe">Prijavi se</p>
+		<input id="mail" type="email" placeholder="Email@hotmail.com">
+        <input id="password"type="password" placeholder="Password">
+        <br>
+        <br>
+        <input id="remember" type="checkbox"> Remember me
+       	<br>
+		<button type="submit" class="signIn">Prijava</button>
+      
+</div>
+        <div id="forma2">
+    <p id="noviClan">Učlani se</p>
+    <form class="forma_novi_clan">
+	
+        <label id="Ime">Ime</label>
+		<input id="ime" type="textbox">
+		<label id="Prezime">Prezime</label>
+       	<input id="prezime"type="textbox">
+        <br> 
+        <br>
+       	<label id="email">E-mail</label>
+		<input id="mail1" type="mail">
+		<label id="pass">Šifra</label>
+       	<input id="pass1"type="textbox">
+       	<br>
+       	<br>
+       
+
+        <button type="submit" class="submit">Spremi</button>
+
+        </form>
+
+</div>
+
+
+
+
+	<footer>
+  <p id="kontaktdno">  Kontakt<br>
+    ------------------------<br>
+        033 275 987<br>
+        studentski.pohodi@live.com<br>
+        Trg oslobođenja - Alija Izetbegović 1,
+71000 Sarajevo,
+Bosna i Hercegovina
+  
+
+</footer>
+	</BODY></HTML>
