--- a/galerija.html
+++ b/galerija.html
@@ -3,7 +3,7 @@
 <HEAD>
 <META http-equiv="Content-Type" content="text/html; charset=utf-8">
 <TITLE>Studentski pohodi</TITLE>
-<link rel="stylesheet" type="text/css" href="galerijaCSS.css">
+<link rel="stylesheet" type="text/css" href="stil.css">
 </HEAD>
 <BODY>
 	
