kontakt_promjena(this)

--- a/kontakt.html
+++ b/kontakt.html
@@ -44,7 +44,7 @@ Bosna i Hercegovina<br>
  <div id="stablo">
 
      <UL id="lista1" style.display="none" >
-<LI  onclick="prikazi()">[+]Vodiči
+<LI  onclick="prikazi(this)">[+]Vodiči
 <ul>
 <LI>Ammar Nurkovic 061/860-232</LI>
 <LI>Ibrahim Halilović 061/513-609</LI>
