--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML>
 <HEAD>
+
 <META http-equiv="Content-Type" content="text/html; charset=utf-8">
 <TITLE>Studentski pohodi</TITLE>
-<link rel="stylesheet" type="text/css" href="indexCSS.css">
+<link rel="stylesheet" type="text/css" href="stil.css">
+
 </HEAD>
 <BODY>
 	
@@ -15,12 +17,14 @@
 	
 	<div id="meni">
 	<ul>
-		<li><a href="index.html">Početna</a></li>
-		<li><a href="Vodic.html">Vodič za pohodaše</a></li>
-		<li><a href="mapa.html">Mapa</a></li>
-		<li><a href="galerija.html">Galerija</a></li>
-		<li><a href="kontakt.html">Kontakt</a></li>
-		<li><a href="prijava.html">Prijava</a></li>
+		<li><a href="#1" id="pocetna">Početna</a></li>
+        <li><a href="#2" id="vodic">Vodič za pohodaše</a></li>
+        <li><a href="#3" id="mapa">Mapa</a></li>
+		<li><a href="#4" id="galerija">Galerija</a></li>
+        <li><a href="#5" id="kontakt">Kontakt</a></li>
+        <li><a href="#6" id="prijava">Prijava</a></li>
+		
+		
 
 		</ul></div>
     <div id ="nebo"></div>
@@ -28,36 +32,7 @@
 	<div id="dno"></div>
 	<div id="face"></div>
 
-
-<div id="vijesti">
-
-<p id="nas1">Pohod u Prag</p>
-<p id ="aut1">Author:Aida,29.3.2015.</p>
-<br>
-<p id="vijest1">U periodu 26.2-2.3.2015.godine organizirali smo pohod u Prag. U ovom pohodu priključilo nam se 1200 pohodaša i doživjelo prelijepe trenutke u Zlatnom gradu. U toku pohoda, obišli smo i Dresden i Budimpeštu. </p>
-<br>
-<p id="det1"> <a href="nesto"> Detaljnije...</a></p>
-
-
-</div>	
-
-<div id="vijesti2">
-<p id="nas1">Pohod u Istanbul</p>
-<p id ="aut1">Author:Aida,29.3.2015.</p>
-<br>
-<p id="vijest1">Istanbul je ponovo osvojen. Vjerni pohodaši uspjeli su zauzeti i ovaj grad. Turci su još jednom pokazali koliko vole naš narod. Hvala svima koji su bili dio nezaboravnog sedmodnevnog provoda. Vidimo se i sljedeće godine. </p>
-<br>
-<p id="det1"> <a href="nesto"> Detaljnije...</a></p>
-</div>	
-
-<div id="vijesti3">
-<p id="nas1">Pohod u Pariz</p>
-<p id ="aut1">Author:Aida,29.3.2015.</p>
-<br>
-<p id="vijest1">U periodu 26.2-2.3.2015.godine organizirali smo pohod u Prag. U ovom pohodu priključilo nam se 1200 pohodaša i doživjelo prelijepe trenutke u Zlatnom gradu. U toku pohoda, obišli smo i Dresden i Budimpeštu. </p>
-<br>
-<p id="det1"> <a href="nesto"> Detaljnije...</a></p>
-</div>	
+<div id="tijelo"></div>
 
 <footer>
   <p id="kontaktdno"> Kontakt<br>
@@ -70,4 +45,9 @@ Bosna i Hercegovina
   
 
 </footer>
+
+<script src="Ajax_Load_Skripta.js"></script>
+<script src="skriptaValidacija.js"></script>
+  <script src="skriptaValidacijaa.js"></script>
+   <script src="tabela_Ajax.js"></script>
 	</BODY></HTML>
