--- a/kontakt.html
+++ b/kontakt.html
@@ -1,32 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML>
-<HEAD>
-<META http-equiv="Content-Type" content="text/html; charset=utf-8">
-<TITLE>Studentski pohodi</TITLE>
-<link rel="stylesheet" type="text/css" href="stil.css">
-</HEAD>
 <BODY>
 	
-	<h1>
-     <div id="logo"></div>
-     <div id="tekst">Studentski pohodi</div>
-	</h1>
-
 	
-	<div id="meni">
-	<ul>
-		<li><a href="index.html">Početna</a></li>
-		<li><a href="Vodic.html">Vodič za pohodaše</a></li>
-		<li><a href="mapa.html">Mapa</a></li>
-		<li><a href="galerija.html">Galerija</a></li>
-		<li><a href="kontakt.html">Kontakt</a></li>
-		<li><a href="prijava.html">Prijava</a></li>
-
-		</ul></div>
-    <div id ="nebo"></div>
-	<div id="twitter"></div>
-	<div id="dno"></div>
-	<div id="face"></div>
 
   <div id="kont">
   		<p> <div id="zaBold"> Kontakt</div><br>
@@ -92,16 +68,7 @@ Bosna i Hercegovina<br>
 <br><br><br><br>
 
 
-<footer>
-  <p id="kontaktdno">  Kontakt<br>
-    ------------------------<br>
-        033 275 987<br>
-        studentski.pohodi@live.com<br>
-        Trg oslobođenja - Alija Izetbegović 1,
-71000 Sarajevo,
-Bosna i Hercegovina
-  
 
-</footer>
  <script src="skriptaMeni.js"> </script>
-	</BODY></HTML>
+	</BODY>
+</HTML>
