--- a/prijava.html
+++ b/prijava.html
@@ -1,38 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML>
-<HEAD>
-<META http-equiv="Content-Type" content="text/html; charset=utf-8">
-<TITLE>Studentski pohodi</TITLE>
-<link rel="stylesheet" type="text/css" href="stil.css">
-</HEAD>
 <BODY>
 	
-	<h1>
-     <div id="logo"></div>
-     <div id="tekst">Studentski pohodi</div>
-	</h1>
-
-	
-	<div id="meni">
-	<ul>
-		<li><a href="index.html">Početna</a></li>
-		<li><a href="Vodic.html">Vodič za pohodaše</a></li>
-		<li><a href="mapa.html">Mapa</a></li>
-		<li><a href="galerija.html">Galerija</a></li>
-		<li><a href="kontakt.html">Kontakt</a></li>
-		<li><a href="prijava.html">Prijava</a></li>
-
-		</ul></div>
-    <div id ="nebo"></div>
-	<div id="twitter"></div>
-	<div id="dno"></div>
-	<div id="face"></div>
-
-
-
   <div id="forma1">
   	
-   <form class="formaPrijava" method="POST"  onsubmit="return checkForm(this);">
+   <form class="formaPrijava">
   		<p id="prijaviSe">Prijavi se</p>
      <table id="tabelaPrijaviSe">
       <tr>
@@ -83,20 +55,27 @@
         <td id="greskaPotvrdiSifru"></td>
         <td id="komentarPotvrdiSifru"> </td>
     </tr>
+    </tr>
+    <tr>
+     <td> <label id="opcinaLabel">Općina</label></td>
+     <td> <input id="opcina" type="textbox" onchange="ajax();"></td>
+        <td id="greskaOpcina"></td>
+        <td id="komentarOpcina"> </td>
+    </tr>
+   <tr>
+     <td> <label id="mjestoLabel">Mjesto</label></td>
+     <td> <input id="mjesto" type="textbox" onchange="ajax();"></td>
+        <td id="greskaMjesto"></td>
+        <td id="komentarMjesto"> </td>
+    </tr>
   </table>
  <button type="submit" class="submit">Spremi</button>
 </form>
 </div>
 
-	<footer>
-  <p id="kontaktdno">  Kontakt<br>
-    ------------------------<br>
-        033 275 987<br>
-        studentski.pohodi@live.com<br>
-        Trg oslobođenja - Alija Izetbegović 1,
-71000 Sarajevo,
-Bosna i Hercegovina
-  </footer>
-  <script src="skriptaValidacija.js"></script>
-  <script src="skriptaValidacijaa.js"></script>
-	</BODY></HTML>
+	
+
+  
+  
+	</BODY>
+</HTML>
