--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="stil.css">
 
 </HEAD>
-<BODY>
+<BODY onload="stranicaLOAD('vijesti.html');">
 	
 	<h1>
      <div id="logo"></div>
@@ -48,6 +48,7 @@ Bosna i Hercegovina
 
 <script src="Ajax_Load_Skripta.js"></script>
 <script src="skriptaValidacija.js"></script>
-  <script src="skriptaValidacijaa.js"></script>
+<!--script type="skriptaValidacijaa.js"></script-->
    <script src="tabela_Ajax.js"></script>
+  
 	</BODY></HTML>
