--- a/prijava.html
+++ b/prijava.html
@@ -27,7 +27,7 @@
 </form>
 <div id="forma2">
  <p id="noviClan">Učlani se</p>
-  <form class="forma_novi_clan" method="POST"  onsubmit="return checkForm2(this);">
+  <form class="forma_novi_clan" method="POST" action="prijava.php"><!-- onsubmit="return checkForm2(this);"-->
 	 <table id="tabelaNoviClan">
      <tr>
        <td> <label id="Ime1">Ime</label></td>
