--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 	<div id="meni">
 	<ul>
-		<li><a href="#1" id="pocetna">Početna</a></li>
+		<li><a href="#1" id="pocetna" onclick="stranicaLOAD('vijesti.php');">Početna</a></li>
         <li><a href="#2" id="vodic">Vodič za pohodaše</a></li>
         <li><a href="#3" id="mapa">Mapa</a></li>
 		<li><a href="#4" id="galerija">Galerija</a></li>
