--- a/vijesti.html
+++ b/vijesti.html
@@ -1,14 +1,22 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
 <HTML>
 	<BODY>
 
-<div id="vijesti">
 
-<p id="nas1">Pohod u Prag</p>
-<p id ="aut1">Author:Aida,29.3.2015.</p>
+<div class="vijesti">
+
+
+</div>
+
+
+<div class="vijesti">
+
+<p class="Naslov">Pohod u Prag</p>
+<p class ="autor">Author:Aida,29.3.2015.</p>
 <br>
-<p id="vijest1">U periodu 26.2-2.3.2015.godine organizirali smo pohod u Prag. U ovom pohodu priključilo nam se 1200 pohodaša i doživjelo prelijepe trenutke u Zlatnom gradu. U toku pohoda, obišli smo i Dresden i Budimpeštu. </p>
+<p class="opis">U periodu 26.2-2.3.2015.godine organizirali smo pohod u Prag. U ovom pohodu priključilo nam se 1200 pohodaša i doživjelo prelijepe trenutke u Zlatnom gradu. U toku pohoda, obišli smo i Dresden i Budimpeštu. </p>
 <br>
 <p id="det1"> <a href="nesto"> Detaljnije...</a></p>
 
