--- a/index.html
+++ b/index.html
@@ -12,27 +12,31 @@
 	<h1>
      <div id="logo"></div>
      <div id="tekst">Studentski pohodi</div>
+
 	</h1>
 
 	
 	<div id="meni">
 	<ul>
 		<li><a href="#1" id="pocetna" onclick="stranicaLOAD('vijesti.php');">Početna</a></li>
-        <li><a href="#2" id="vodic">Vodič za pohodaše</a></li>
-        <li><a href="#3" id="mapa">Mapa</a></li>
-		<li><a href="#4" id="galerija">Galerija</a></li>
-        <li><a href="#5" id="kontakt">Kontakt</a></li>
+        <li><a href="#2" id="vodic" onclick="stranicaLOAD('Vodic.php');">Vodič za pohodaše</a></li>
+        <li><a href="#3" id="mapa" onclick="stranicaLOAD('mapa.php');">Mapa</a></li>
+		<li><a href="#4" id="galerija" onclick="stranicaLOAD('galerija.php');">Galerija</a></li>
+        <li><a href="#5" id="kontakt" onclick="stranicaLOAD('kontakt.php');">Kontakt</a></li>
         <li><a href="#6" id="prijava">Prijava</a></li>
 		
 		
 
 		</ul></div>
+
+
     <div id ="nebo"></div>
 	<div id="twitter"></div>
 	<div id="dno"></div>
 	<div id="face"></div>
 
 <div id="tijelo"></div>
+
 
 <footer>
   <p id="kontaktdno"> Kontakt<br>
@@ -50,5 +54,7 @@ Bosna i Hercegovina
 <script src="skriptaValidacija.js"></script>
 <!--script type="skriptaValidacijaa.js"></script-->
    <script src="tabela_Ajax.js"></script>
+   <script src="skriptaMeni.js"></script>
+   <script src="skriptaKomentari.js"></script>
   
 	</BODY></HTML>
