--- a/prijava.html
+++ b/prijava.html
@@ -48,7 +48,7 @@
         <td id="komentarMjesto"> </td>
     </tr>
   </table>
- <button type="submit" class="submit">Spremi</button>
+ <button type="submit"  id="button">Spremi</button>
 </form>
 </div>
 
