--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <HTML>
 <HEAD>
 
+
+
+
+
 <META http-equiv="Content-Type" content="text/html; charset=utf-8">
 <TITLE>Studentski pohodi</TITLE>
 <link rel="stylesheet" type="text/css" href="stil.css">
 
 </HEAD>
+
 <BODY onload="stranicaLOAD('vijesti.html');">
 	
 	<h1>
@@ -36,11 +41,11 @@
 	<div id="face"></div>
 
 <div id="tijelo"></div>
+<!--div id="googleMap" style="width:500px;height:380px;"></div-->
 
-
-<footer>
+<!--footer>
   <p id="kontaktdno"> Kontakt<br>
-    ------------------------<br>
+    <br>
         033 275 987<br>
         studentski.pohodi@live.com<br>
         Trg oslobođenja - Alija Izetbegović 1,
@@ -48,7 +53,10 @@
 Bosna i Hercegovina
   
 
-</footer>
+</footer-->
+<script src="http://maps.googleapis.com/maps/api/js"></script>
+
+<script src="mapaSkripta.js"></script>
 
 <script src="Ajax_Load_Skripta.js"></script>
 <script src="skriptaValidacija.js"></script>
@@ -56,5 +64,387 @@ Bosna i Hercegovina
    <script src="tabela_Ajax.js"></script>
    <script src="skriptaMeni.js"></script>
    <script src="skriptaKomentari.js"></script>
+   <script language="javascript" type="text/javascript">
+   // Array of igalerija/ data
+
+var imageData= new Array(10)
+
+createTwoDimensionalArray(3);
+
+
+
+// Image galerija/ data
+
+imageData[0][0]="galerija/slika13.jpg";
+
+imageData[1][0]="galerija/slika1.jpg";
+
+imageData[2][0]="galerija/slika31.jpg";
+
+imageData[3][0]="galerija/slika2.jpg";
+
+imageData[4][0]="galerija/slika55.jpg";
+
+imageData[5][0]="galerija/slika6.jpg";
+
+imageData[6][0]="galerija/slika7.jpg";
+
+imageData[7][0]="galerija/slika88.jpg";
+
+imageData[8][0]="galerija/slika99.jpg";
+
+imageData[9][0]="galerija/slika10.jpg";
+
+
+// Image title data
+
+imageData[0][1]="Uskoro";
+
+imageData[1][1]="Centro. :)";
+
+imageData[2][1]="Pohod u Prag";
+
+imageData[3][1]="Hajmo curice, hajmo dječaci... :)";
+
+imageData[4][1]="Mi se spremamo, a vi?";
+
+imageData[5][1]="Istanbul";
+
+imageData[6][1]="Jedna si jedina!";
+
+imageData[7][1]="Studentski pohodi";
+
+imageData[8][1]="Putovali smo...";
+
+imageData[9][1]="Slika pohoda...";
+
+
+
+// Image description data
+
+imageData[0][2]="Pohod U Istanbul. JEste li spreeeemnii?";
+
+imageData[1][2]="Naši vjerni partneri se uvijek pobrinu za sigurnu i udobnu vožnju.";
+
+imageData[2][2]="Pohod u Prag uspješno završen. Puno lijepih trenutaka smo skupili svi zajedno. I znate kako kažu: Prague never lets you go... ";
+
+imageData[3][2]="Opleti šalove, šarene kapice,tople džempere i vunene rukavice,da, da, da. I još samo: Nikom nije ljepse neg' je nam samo da je 'vako svaki dan. Pohodimo bh planine!  ";
+
+imageData[4][2]="Kao što možete vidjeti vrijedni tim radi samo za vas, kako bi ste svi imali odgovarajuće mjesto u autobusu i hostelu. Jedni, jedini, Studentski Pohodi! Još malo i krećemooo...:)";
+
+imageData[5][2]="Lom smo napravili u Istanbulu. I ponosno možemo reći: ISstanbul je ponovo osvojeeeeeeen. :D :D";
+
+imageData[6][2]="Aktima 25. novembra 1943. izražena je odlučnost naroda BiH da njihova zemlja, koja nije ni srpska, ni hrvatska ni muslimanska, nego i srpska i muslimanska i hrvatska, bude zbratimljena zajednica u kojoj će biti osigurana puna ravnopravnost svih Srba, Muslimana i Hrvata.";
+
+imageData[7][2]="Dragi naši, hvala Vam na ogromnoj podršci koju nam pružate. Bez Vas mi ne bismo bili mi.";
+
+imageData[8][2]="I ove godine smo puno putovali. Pariz, Budimpešta, Rim, Istanbul, Beč,... Koja destinacija je sljedeća? Ne zaboravite: Skupljajte trenutke, ne stvari! Vaši pohodi :D";
+
+imageData[9][2]="Možete li bolje od ovoga? Pošaljite nam Vašu najljepšu, najbolju, najluđu sliku na pohodi@live.com i osvojite vrijedne nagrade. :)";
+
+
+// Our index, boundry and scroll tracking variables
+
+var imageIndexFirst = 0;
+
+var imageIndexLast = 3;
+
+var continueScroll = 0;
+
+var maxIndex = 9;
+
+var minIndex = 0;
+
+
+// This function creates our two dimensional array
+
+function createTwoDimensionalArray(arraySize) {
+
+for (i = 0; i < imageData.length; ++ i)
+
+imageData[i] = new Array(arraySize);
+
+}
+
+
+// This function preloads the thumbnail images
+
+function preloadThumbnails() {
+
+imageObject = new Image();
+
+for (i = 0; i < imageData.length; ++ i)
+
+imageObject.src = imageData[i][0];
+
+}
+
+
+
+// This function changes the text of a table cell
+
+function changeCellText(cellId,myCellData){
+
+document.getElementById(cellId).innerHTML = myCellData;
+
+}
+
+
+// This function changes the images
+
+function changeImage(ImageToChange,MyimageData){
+
+document.getElementById(ImageToChange).setAttribute('src',MyimageData)
+
+}
+
+
+// This function changes the image alternate text
+
+function changeImageAlt(ImageToChange,imageData){
+
+document.getElementById(ImageToChange).setAttribute('alt',imageData)
+
+}
+
+
+// This function changes the image alternate text
+
+function changeImageTitle(ImageToChange,imageData){
+
+document.getElementById(ImageToChange).setAttribute('title',imageData)
+
+}
+
+
+// This function changes the image onmouseover
+
+function changeImageOnMouseOver(ImageToChange,imageIndex){
+
+document.getElementById(ImageToChange).setAttribute('onmouseover','handleThumbOnMouseOver(' + imageIndex + ');')
+
+}
+
+
+// This function hanles calling on change function
+
+// for a thumbnail onmouseover event
+
+function handleThumbOnMouseOver(imageIndex){
+
+changeImage('imageLarge',imageData[imageIndex][0]);
+
+changeCellText('imageTitleCell',imageData[imageIndex][1]);
+
+changeCellText('imageDescriptionCell',imageData[imageIndex][2]);
+
+changeImageAlt('imageLarge',imageData[imageIndex][1] + ' - ' + imageData[imageIndex][2]);
+
+changeImageTitle('imageLarge',imageData[imageIndex][1] + ' - ' + imageData[imageIndex][2]);
+
+}
+
+
+// This function handles the scrolling in both directions
+
+function scrollImages(scrollDirection) {
+
+// We need a variable for holding our working index value
+
+var currentIndex;
+
+// Determine which direction to scroll - default is down (left)
+
+if (scrollDirection == 'up')
+
+{
+
+// Only do work if we are not to the last image
+
+if (imageIndexLast != maxIndex)
+
+{
+
+// We set the color to black for both before we begin
+
+// If we reach the end during the process we'll change the "button" color to silver
+
+document.getElementById('scrollPreviousCell').setAttribute('style','color: Black')
+
+document.getElementById('scrollNextCell').setAttribute('style','color: Black')
+
+// Move our tracking indexes up one
+
+imageIndexLast = imageIndexLast + 1;
+
+imageIndexFirst = imageIndexFirst + 1;
+
+//  Change next "button" to silver if we are at the end
+
+if (imageIndexLast == maxIndex)
+
+{
+
+document.getElementById('scrollNextCell').setAttribute('style','color: Silver')
+
+}
+
+// Changescrollbar images in a set delay sequence to give a pseudo-animated effect
+
+currentIndex = imageIndexLast;
+
+changeImage('scrollThumb4',imageData[currentIndex][0]);
+
+changeImageOnMouseOver('scrollThumb4',currentIndex);
+
+currentIndex = imageIndexLast - 1;
+
+setTimeout("changeImage('scrollThumb3',imageData[" + currentIndex + "][0])",25);
+
+setTimeout("changeImageOnMouseOver('scrollThumb3'," + currentIndex + ")",25);
+
+currentIndex = imageIndexLast - 2;
+
+setTimeout("changeImage('scrollThumb2',imageData[" + currentIndex + "][0])",50);
+
+setTimeout("changeImageOnMouseOver('scrollThumb2'," + currentIndex + ")",50);
+
+currentIndex = imageIndexLast - 3;
+
+setTimeout("changeImage('scrollThumb1',imageData[" + currentIndex + "][0])",75);
+
+setTimeout("changeImageOnMouseOver('scrollThumb1'," + currentIndex + ")",75);
+
+// Wait and check to see if user is still hovering over button
+
+// This pause gives the user a chance to move away from the button and stop scrolling
+
+setTimeout("scrollAgain('" + scrollDirection + "')",1000);
+
+}
+
+}
+
+else
+
+{
+
+// Only do work if we are not to the first image
+
+if (imageIndexFirst != minIndex)
+
+{
+
+// We set the color to black for both before we begin
+
+// If we reach the end during the process we'll change the "button" color to silver
+
+document.getElementById('scrollPreviousCell').setAttribute('style','color: Black')
+
+document.getElementById('scrollNextCell').setAttribute('style','color: Black')
+
+// Move our tracking indexes down one
+
+imageIndexLast = imageIndexLast - 1;
+
+imageIndexFirst = imageIndexFirst - 1;
+
+//  Change previous "button" to silver if we are at the beginning
+
+if (imageIndexFirst == minIndex)
+
+{
+
+document.getElementById('scrollPreviousCell').setAttribute('style','color: Silver')
+
+}
+
+// Change scrollbar images in a set delay sequence to give a pseudo-animated effect
+
+currentIndex = imageIndexFirst;
+
+changeImage('scrollThumb1',imageData[currentIndex][0]);
+
+changeImageOnMouseOver('scrollThumb1',currentIndex);
+
+currentIndex = imageIndexFirst + 1;
+
+setTimeout("changeImage('scrollThumb2',imageData[" + currentIndex + "][0])",25);
+
+setTimeout("changeImageOnMouseOver('scrollThumb2'," + currentIndex + ")",25);
+
+currentIndex = imageIndexFirst + 2;
+
+setTimeout("changeImage('scrollThumb3',imageData[" + currentIndex + "][0])",50);
+
+setTimeout("changeImageOnMouseOver('scrollThumb3'," + currentIndex + ")",50);
+
+currentIndex = imageIndexFirst + 3;
+
+setTimeout("changeImage('scrollThumb4',imageData[" + currentIndex + "][0])",75);
+
+setTimeout("changeImageOnMouseOver('scrollThumb4'," + currentIndex + ")",75);
+
+// Wait and check to see if user is still hovering over button
+
+// This pause gives the user a chance to move away from the button and stop scrolling
+
+setTimeout("scrollAgain('" + scrollDirection + "')",1000);
+
+}
+
+}
+
+}
+
+
+// This function determines whether or not to keep scrolling
+
+function scrollAgain(scrollDirection)
+
+{
+
+if (continueScroll == 1)
+
+{
+
+scrollImages(scrollDirection);
+
+}
+
+}
+
+
+// This function kicks off scrolling down (left)
+
+function scrollPrevious() {
+
+continueScroll = 1;
+
+scrollImages('down');
+
+}
+
+
+// This function kicks off scrolling up (right)
+
+function scrollNext() {
+
+continueScroll = 1;
+
+scrollImages('up');
+
+}
+
+
+// This function stops the scrolling action
+
+function scrollStop() {
+
+continueScroll = 0;
+
+}
+
+</script>
   
 	</BODY></HTML>
