--- a/vijesti.html
+++ b/vijesti.html
@@ -62,5 +62,8 @@
 <script src="Ajax_Load_Skripta.js"></script>
 <script src="skriptaValidacija.js"></script>
   <script src="skriptaValidacijaa.js"></script>	
+  <script src="http://maps.googleapis.com/maps/api/js"></script>
+
+<script src="mapaSkripta.js"></script>
 </BODY>
 </HTML>
